fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
+  padding:0;
   display: flex;
   flex-direction: column;
   font-family: "Roboto";
@@ -9,14 +13,14 @@ body {
 
 #map {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .control {
   
   border-radius: 4px;
   position: absolute;
-  height: max-content;
+
   z-index: 600;
   width: 300px;
   background-color: rgba(255, 255, 255, 0.8);
@@ -24,7 +28,7 @@ body {
 }
 
 #legend {
-  bottom: 20%;
+  bottom: 10%;
   right: 5%;
   padding: 1.5rem;
 }
@@ -41,7 +45,7 @@ body {
 
 #controls {
   top: 5%;
-  right: 5%;
+  left: 5%;
   padding: 1.25rem 1.5rem;
 }
 
@@ -89,7 +93,7 @@ body {
 footer {
   background-color: rgba(255,255,255,.9);
   height: 60px;
-  width: 100vw; 
+  width: 100%; 
   position: absolute; 
   bottom: 0;
   left: 0;
